--- a/docs/package.json
+++ b/docs/package.json
@@ -1,26 +1,19 @@
 {
-  "name": "fast-paced-shooter",
+  "name": "shawty-server",
   "version": "1.0.0",
-  "description": "Multiplayer FPS Game",
+  "description": "WebSocket server for Shawty FPS game",
   "main": "server.js",
-  "type": "module",  "scripts": {
+  "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"  },
-  "keywords": [
-    "game",
-    "fps",
-    "multiplayer",
-    "socket.io",
-    "three.js",
-    "rapier"
-  ],
-  "author": "Your Name",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1" // Optional: for easier local development
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
