--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2", // Or latest
-    "socket.io": "^4.7.2" // Or latest
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2"
   }
 }
