--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,18 @@
-
 {
-  "name": "shawty-game-server",
-  "version": "0.1.0",
-  "description": "Server for the Shawty online multiplayer shooter",
-  "main": "server/server.js",
+  "name": "shawty-server",
+  "version": "1.0.0",
+  "description": "Server for Shawty game",
+  "main": "server.js",
   "scripts": {
-    "start": "node server/server.js",
-    "dev": "nodemon server/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "cannon-es": "^0.20.0"
+    "socket.io": "^4.7.2"
+    // "cannon-es": "^0.20.0" // For future server-side physics
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "nodemon": "^3.0.1" 
   }
 }
