--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "shawty-game-server",
+  "name": "shawty-multiplayer-shooter",
   "version": "1.0.0",
-  "description": "Multiplayer shooter game server for Shawty",
+  "description": "Online multiplayer shooter game",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "uuid": "^9.0.1"
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
