--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "shawty-multiplayer-shooter",
+  "name": "shawty-server",
   "version": "1.0.0",
-  "description": "Online multiplayer shooter game",
+  "description": "Server for Shawty online game",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "cannon-es": "^0.20.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=14.0.0"
   }
 }
