--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,16 @@
 {
   "name": "shawty-server",
   "version": "1.0.0",
-  "description": "Server for Shawty online game",
+  "description": "Server for Shawty game",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "cannon-es": "^0.20.0"
+    "ws": "^8.14.2",
+    "cannon-es": "^0.20.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
